# sorkin

./: .gitignore  Cargo.toml  Justfile  README.md  test-linux.sh
.github/workflows/: build.yml
assets/: Info.plist.template  sorkin.gdextension
assets/sorkin/: sorkin.gd
plugin/: ding-126626.mp3.import  icon.gd  icon.svg.import  node_2d.tscn  project.godot
plugin/addons/: sorkin.gdextension  sorkin.gdextension.uid  testo.opus  testo.webm
plugin/addons/sorkin/: plugin.cfg
src/: audio.rs  conversion.rs  lib.rs  settings.rs
src/glsl/: rgb_to_yuv420p.glsl
test_plugin/: .gitignore  Screenshot_2024-08-21_at_12.49.51_AM.webp.import  check.gd  icon.gd.uid  node_2d.gd  node_2d.gd.uid  node_2d.tscn  project.godot
test_plugin/.godot/: extension_list.cfg
test_plugin/addons/: sorkin.gdextension
test_plugin/addons/sorkin/: sorkin.gd.uid  sorkin.gdextension
