[package]
name = "sorkin"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/paulmay/sorkin"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = "0.1.3"

[target.'cfg(not(target_os = "windows"))'.dependencies]
ffmpeg-next = { version = "7.1", features = ["build", "static"] }

[target.'cfg(target_os = "windows")'.dependencies]
ffmpeg-next = { version = "7.1", features = ["static"] }
